--- a/ci/conda/meta.yaml
+++ b/ci/conda/meta.yaml
@@ -1,30 +1,29 @@
 package:
   name: pyocct
-  version: 7.4.0.0
+  version: 7.5.0.0
 
 source:
   path: ../..
 
 build:
-  number: 1
+  number: 0
 
 requirements:
   build:
     - {{ compiler('cxx') }}  # [win]
     - cmake
     - ninja
+    - glew # [linux]
 
   host:
     - python
     - pybind11
-    - occt ==7.4.0
-    - smesh4pyocct ==8.3.0.4
+    - occt ==7.5.0
     - tbb-devel
 
   run:
     - python
-    - occt ==7.4.0
-    - smesh4pyocct ==8.3.0.4
+    - occt ==7.5.0
 
 test:
   source_files:
@@ -34,5 +33,5 @@ about:
   home: https://github.com/trelau/pyOCCT
   license: LGPL2.1
   license_family: LGPL
-  summary: Python bindings for OpenCASCADE and SMESH
-  description: Python bindings for OpenCASCADE geometry kernel and SMESH meshing library.
+  summary: Python bindings for OpenCASCADE.
+  description: Python bindings for OpenCASCADE geometry kernel.
