--- a/ci/conda/meta.yaml
+++ b/ci/conda/meta.yaml
@@ -20,12 +20,12 @@ requirements:
   host:
     - python
     - pybind11
-    - occt ==7.5.*
+    - occt ==7.5.1
     - tbb-devel
 
   run:
     - python
-    - occt ==7.5.*
+    - occt ==7.5.1
 
 test:
   source_files:
