--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,35 +24,21 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -q -y install libglu1-mesa-dev libgl1-mesa-dev libxi-dev libglfw3-dev libgles2-mesa-dev
-
       - name: "Prepare VM"
         run: |
           sudo rm -Rf /home/linuxbrew/
-
       - name: "Clone pyOCCT"
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
-
-      - name: "Configure conda"
-        shell: pwsh
-        run: |
-          conda init --all
-          conda env create -f binder/environment.yml
-
-      - name: "Check conda"
-        shell: pwsh
-        run: |
-          conda activate binder
-          conda info -a
-          conda list
-
+      - name: "Create env"
+        uses: mamba-org/setup-micromamba@v2
+        with:
+            environment-file: binder/environment.yml
       - name: "Generate bindings"
-        shell: pwsh
         run: |
-          conda activate binder
+          micromamba activate binder
           python binder/run.py -c binder/config.txt -o src
-
       - name: "Upload bindings"
         uses: actions/upload-artifact@v3
         with:
@@ -128,29 +114,22 @@ jobs:
 
       - name: "Clone pyOCCT"
         uses: actions/checkout@v3
-
-      - name: "Install conda build"
-        run: |
-            conda config --env --add channels conda-forge
-            conda install conda-build==3.27.0 boa
-      - name: "Check conda"
-        run: |
-          conda info -a
-          conda list
-
       - name: "Download binding sources"
         uses: actions/download-artifact@v3
         with:
           name: pyocct_src_${{ matrix.os }}
           path: src
-
+      - name: "Create build env"
+        uses: mamba-org/setup-micromamba@v2
+        with:
+            environment-file: environment.yml
       - name: "Run conda build"
-        run: boa build ci --python ${{ matrix.python-version }}
+        run: boa build ci --python ${{ matrix.python-version }} --output-folder output
       - name: "Upload conda package"
         uses: actions/upload-artifact@v3
         with:
           name: pyocct-py${{ matrix.python-version }}_${{ matrix.os }}
-          path: /usr/share/miniconda/conda-bld/linux-64
+          path: output
 
   build_win:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
