--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,15 +119,13 @@ jobs:
             cache-environment: true
       - name: "Run conda build"
         shell: micromamba-shell {0}
-        run: |
-            mkdir output
-            boa build ci --python ${{ matrix.python-version }} --output-folder output
+        run: boa build ci --python ${{ matrix.python-version }}
 
       - name: "Upload conda package"
         uses: actions/upload-artifact@v4
         with:
           name: pyocct-py${{ matrix.python-version }}_${{ matrix.os }}
-          path: output
+          path: micromamba/envs/pyocct/conda-bld/linux-64
 
   build_win:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
