--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: pyocct-py${{ matrix.python-version }}_${{ matrix.os }}
-          path: micromamba/envs/pyocct/conda-bld/linux-64
+          path: ~/micromamba/envs/pyocct/conda-bld/linux-64
 
   build_win:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
