--- a/ci/recipe.yaml
+++ b/ci/recipe.yaml
@@ -17,6 +17,7 @@ requirements:
     - ninja
     - rapidjson
     - python
+    - setuptools
     - sel(linux): vtk * egl*
     - sel(linux): '{{ cdt("mesa-libgl-devel") }}'
     - sel(linux): '{{ cdt("libxi-devel") }}'
