Add cxx devel for linux only
Former-commit-id: d58ad71b84f6dac59597a64c13afb7419f757015

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - clangdev
   - python-clang
   - occt=7.9.0
+  - libcxx-devel # [not win]
   - tbb-devel
   - rapidjson
   - pybind11
