Try using sel(linux)
Former-commit-id: 9a650021d88a1a10dcd6490346de397d71c70550

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - clangdev
   - python-clang
   - occt=7.9.0
-  - libcxx-devel # [not win]
+  - sel(linux): libcxx-devel
   - tbb-devel
   - rapidjson
   - pybind11
