Fix CI and windows build

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -5,8 +5,8 @@ dependencies:
   - python=3.13
   - clangdev
   - python-clang
-  - libcxx-devel
   - occt=7.9.0
+  - sel(linux): libcxx-devel
   - tbb-devel
   - rapidjson
   - pybind11
