--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,35 +26,25 @@ jobs:
           sudo apt-get -q -y install libglu1-mesa-dev libgl1-mesa-dev libxi-dev libglfw3-dev libgles2-mesa-dev
 
       - name: "Prepare VM"
-        run: |
-          sudo rm -Rf /home/linuxbrew/
+        run: sudo rm -Rf /home/linuxbrew/
 
       - name: "Clone pyOCCT"
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
 
-      - name: "Configure conda"
-        shell: pwsh
-        run: |
-          conda init --all
-          conda env create -f binder/environment.yml
-
-      - name: "Check conda"
-        shell: pwsh
-        run: |
-          conda activate binder
-          conda info -a
-          conda list
+      - name: "Create env"
+        uses: mamba-org/setup-micromamba@v2
+        with:
+            environment-file: binder/environment.yml
+            cache-environment: true
 
       - name: "Generate bindings"
-        shell: pwsh
-        run: |
-          conda activate binder
-          python binder/run.py -c binder/config.txt -o src
+        shell: micromamba-shell {0}
+        run: python binder/run.py -c binder/config.txt -o src
 
       - name: "Upload bindings"
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: pyocct_src_${{ matrix.os }}
           path: src
@@ -68,38 +58,23 @@ jobs:
       matrix:
         os: ['windows-latest']
     steps:
-
       - name: "Clone pyOCCT"
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
 
-      - name: "Add conda to PATH"
-        shell: bash -l {0}
-        run: echo "$CONDA/Scripts" >> $GITHUB_PATH
-
-      - name: "Configure conda"
-        shell: bash -l {0}
-        run: |
-          conda init --all
-          conda env create -f binder/environment.yml
-
-      - name: "Check conda"
-        shell: bash -l {0}
-        run: |
-          conda activate binder
-          conda info -a
-          conda list
+      - name: "Create env"
+        uses: mamba-org/setup-micromamba@v2
+        with:
+            environment-file: binder/environment.yml
+            cache-environment: true
 
       - name: "Generate bindings"
         shell: bash -l {0}
-        run: |
-          conda activate binder
-          set CONDA_DLL_SEARCH_MODIFICATION_ENABLE=1
-          python binder/run.py -c binder/config.txt -o src
+        run: python binder/run.py -c binder/config.txt -o src
 
       - name: "Upload bindings"
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: pyocct_src_${{ matrix.os }}
           path: src
@@ -113,7 +88,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest']
-        python-version: ['3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.12', '3.13']
     steps:
 
       - name: "Install OpenGL"
@@ -129,28 +104,26 @@ jobs:
       - name: "Clone pyOCCT"
         uses: actions/checkout@v3
 
-      - name: "Install conda build"
-        run: |
-            conda config --env --add channels conda-forge
-            conda install conda-build==3.27.0 boa
-      - name: "Check conda"
-        run: |
-          conda info -a
-          conda list
-
       - name: "Download binding sources"
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: pyocct_src_${{ matrix.os }}
           path: src
 
+      - name: "Create build env"
+        uses: mamba-org/setup-micromamba@v2
+        with:
+            environment-file: environment.yml
+            cache-environment: true
       - name: "Run conda build"
+        shell: micromamba-shell {0}
         run: boa build ci --python ${{ matrix.python-version }}
+
       - name: "Upload conda package"
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: pyocct-py${{ matrix.python-version }}_${{ matrix.os }}
-          path: /usr/share/miniconda/conda-bld/linux-64
+          path: ~/micromamba/envs/pyocct/conda-bld/linux-64
 
   build_win:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
@@ -161,30 +134,14 @@ jobs:
       fail-fast: false
       matrix:
         os: ['windows-latest']
-        python-version: ['3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.12', '3.13']
     steps:
 
       - name: "Clone pyOCCT"
         uses: actions/checkout@v3
 
-      - name: "Add conda to PATH"
-        shell: bash -l {0}
-        run: echo "$CONDA/Scripts" >> $GITHUB_PATH
-
-      - name: "Install conda build"
-        shell: bash -l {0}
-        run: |
-            conda config --env --add channels conda-forge
-            conda install conda-build==3.27.0 boa
-
-      - name: "Check conda"
-        shell: bash -l {0}
-        run: |
-          conda info -a
-          conda list
-
       - name: "Download binding sources"
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: pyocct_src_${{ matrix.os }}
           path: src
@@ -195,119 +152,18 @@ jobs:
           rm -Rf C:/ProgramData/chocolatey/
           rm -Rf C:/Program Files/LLVM
 
+      - name: "Create build env"
+        uses: mamba-org/setup-micromamba@v2
+        with:
+            environment-file: environment.yml
+            cache-environment: true
+
       - name: "Run conda build"
         shell: bash -l {0}
-        run: |
-          mkdir conda
-          source activate
-          boa build ci --python ${{ matrix.python-version }} --output-folder conda
+        run: boa build ci --python ${{ matrix.python-version }} -m ci/conda_build_config.yaml
 
       - name: "Upload conda package"
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: pyocct-py${{ matrix.python-version }}_${{ matrix.os }}
-          path: conda
-
-  generate_macos:
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
-    name: Generate (${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ['macos-latest']
-    steps:
-
-      - name: "Clone pyOCCT"
-        uses: actions/checkout@v3
-        with:
-          submodules: 'recursive'
-
-      - name: "Add conda to PATH"
-        run: echo "$CONDA/bin" >> $GITHUB_PATH
-
-      - name: "MacOS fix"
-        run: sudo chown -R $USER $CONDA
-
-      - name: "Configure conda"
-        shell: pwsh
-        run: |
-          conda init --all
-          conda env create -f binder/environment.yml
-
-      - name: "Check conda"
-        shell: pwsh
-        run: |
-          conda activate binder
-          conda info -a
-          conda list
-
-      - name: "Generate bindings"
-        shell: pwsh
-        run: |
-          conda activate binder
-          python binder/run.py -c binder/config.txt -o src
-
-      - name: "Upload bindings"
-        uses: actions/upload-artifact@v3
-        with:
-          name: pyocct_src_${{ matrix.os }}
-          path: src
-
-#  build_macos:
-#    if: "!contains(github.event.head_commit.message, 'skip ci')"
-#    name: Build (${{ matrix.python-version }}, ${{ matrix.os }})
-#    needs: generate_macos
-#    runs-on: ${{ matrix.os }}
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        os: ['macos-latest']
-#        python-version: ['3.6', '3.7', '3.8', '3.9']
-#    steps:
-#
-#      - name: "Clone pyOCCT"
-#        uses: actions/checkout@v3
-#
-#      - name: "Add conda to PATH"
-#        run: echo "$CONDA/bin" >> $GITHUB_PATH
-#
-#      - name: "MacOS fix"
-#        run: |
-#          sudo chown -R $USER $CONDA
-#          curl -o  MacOSX10.9.sdk.tar.xz -L https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.9.sdk.tar.xz
-#          tar xf MacOSX10.9.sdk.tar.xz
-#          sudo mv -v MacOSX10.9.sdk /opt/
-#
-#      - name: "Configure conda"
-#        shell: pwsh
-#        run: conda init --all
-#
-#      - name: "Install conda build"
-#        shell: pwsh
-#        run: conda install -c conda-forge  conda-build
-#
-#      - name: "Check conda"
-#        shell: pwsh
-#        run: |
-#          conda info -a
-#          conda list
-#
-#      - name: "Download binding sources"
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: pyocct_src_${{ matrix.os }}
-#          path: src/occt
-#
-#      - name: "Run conda build"
-#        shell: pwsh
-#        run: |
-#          mkdir conda
-#          conda activate
-#          boa build ci --python ${{ matrix.python-version }} --output-folder conda
-#
-#      - name: "Upload conda package"
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: pyocct-py${{ matrix.python-version }}_${{ matrix.os }}
-#          path: conda
+          path:  $HOME/micromamba/envs/pyocct/conda-bld/win-64
